Fix On-Page Link overlapping content

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 html {
     scroll-behavior: smooth;
+    scroll-padding-top: 100px;
 }
 
 body {
@@ -45,7 +46,7 @@ body {
 
 /* Header: content */
 .header {
-    padding: 30px 200px 80px;
+    padding: 10px 200px 80px;
     background-color: #1F2937;
     color: white;
 }
@@ -77,9 +78,6 @@ body {
 }
 
 /* body: header */
-.body {
-    padding-top: 60px;
-}
 .body h1 {
     margin: 24px;
     text-align: center;
